# llmct

./: .gitignore  .openclaude-profile.json  README.md  pyproject.toml  text.txt  where_emotions_lie_paper.tex
notebooks/: compare_runs.ipynb  compare_runs.py  explore.ipynb
published/: where emotions lie.html
scenarios/: example_qwen_basic.yaml
scenarios/cf_bf/: 1_cf_qwen_2.5_3b.yaml
scenarios/inject/: scenery_summary_qwen_2.5_3b.yaml  where_emotions_lie_qwen_2.5_3b.yaml
scenarios/languages/languages_llama-3.1-1B/: language_english.yaml  language_french.yaml  language_german.yaml  language_italian.yaml  language_mandarin.yaml  language_spanish.yaml
scenarios/languages/languages_llama-3.1-3B/: language_english.yaml  language_french.yaml  language_german.yaml  language_italian.yaml  language_mandarin.yaml  language_spanish.yaml
scenarios/languages/languages_phi_4/: language_english.yaml  language_french.yaml  (+4 more)
scenarios/size/: scenery_detailed_qwen_2.5_3b.yaml  scenery_summary_qwen_2.5_3b.yaml  technical_detailed_qwen_2.5_3b.yaml  technical_summary_qwen_2.5_3b.yaml
src/activation_lab/: capture.py  cli.py  device.py  generation.py  heatmap.py  interp.py  models.py  scenario.py  serialize.py
tests/: test_smoke.py
viewer_web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
viewer_web/src/: App.tsx  ConfiguratorTab.tsx  ConversationSnapshotsTab.tsx  LineChart.tsx  MultiCompareTab.tsx  NpzAttentionTab.tsx  PairCompareTab.tsx  PinnedOverlayTab.tsx  ReferencesTab.tsx  RunOverviewTab.tsx  Sidebar.tsx  api.ts  refLabels.ts  styles.css
(+31 files in other folders)
